--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 /*ALL*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
+
+body * {
+    font-family: 'Open Sans', sans-serif !important;
+}
 html {
     position: relative;
     min-height: 100%;
@@ -10,6 +15,11 @@ html {
 
 h1 {
     text-align: center;
+    margin: 0;
+    font-size: 3em;
+}
+
+h2 {
     margin: 0;
 }
 
@@ -32,6 +42,28 @@ h1 {
     width: 90vw;
     height: 30vh;
     overflow: hidden;
+}
+
+#advice {
+    margin-top: 2vh;
+}
+
+#adviceText {
+    overflow: auto;
+    overflow-y: scroll;
+    height: 28vh;
+}
+
+#recommended{
+    position: absolute;
+    bottom: 8vh;
+    width: 100%;
+    height: 10vh;
+}
+.recommendedItem {
+    float: left;
+    width: 28%;
+    margin-left: 2vw;
 }
 
 .footer {
