--- a/css/main.css
+++ b/css/main.css
@@ -76,16 +76,23 @@ h2 {
 }
 
 /*Page Three*/
+#msgs {
+    width: 90vw;
+    height: 70vh;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+
 #chatbox {
     text-align:left;
     margin:0 auto;
     margin-bottom:25px;
     padding:10px;
     background:#fff;
-    height:270px;
     width:90%;
-    border:1px solid #ACD8F0;
-    overflow:auto; }
+    overflow:auto;
+}
   
 #usermsg {
     width:100%;
